// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Confirmation matches snapshot no selection 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.5rem;
  box-shadow: 0 0.2rem 0.4rem rgba(ui-color(black),0.2);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  overflow: initial;
  font-size: 1.4rem;
  height: 3rem;
  padding: 0 2rem;
  color: #fff;
  background-color: #d4450c;
  font-weight: bold;
  border: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c2:hover {
  background-color: ,#be3c08,;
}

.c2:active {
  background-color: ,#b03808,;
}

.c2:focus {
  outline: solid #fff;
  box-shadow: inset 0 0 0 0.3rem #000;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.5rem;
  box-shadow: 0 0.2rem 0.4rem rgba(ui-color(black),0.2);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  overflow: initial;
  font-size: 1.4rem;
  height: 3rem;
  padding: 0 2rem;
  color: #5e6062;
  background-color: #fff;
  border: 1px solid #d5d5d5;
  font-weight: regular;
}

.c3:hover {
  background-color: ,#fafafa,;
}

.c3:active {
  background-color: ,#e5e5e5,;
}

.c1 {
  display: grid;
  overflow: visible;
  grid-auto-flow: column;
  grid-gap: 1rem;
}

.c0 {
  background: rgba(0,0,0,0.9);
  outline: none;
  border-radius: 0.4rem;
  box-shadow: 0 0 2px 0 rgba(0,0,0,0.14),0 2px 2px 0 rgba(0,0,0,0.12),0 1px 3px 0 rgba(0,0,0,0.2);
  -webkit-transition: background 200ms;
  transition: background 200ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1.6rem;
  overflow: visible;
  min-height: 100%;
  min-width: 100%;
  position: static;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
}

.c0 label {
  color: #424242;
  font-size: 1.4rem;
  line-height: 1.6rem;
  font-weight: normal;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #fff;
  margin-bottom: 0.8rem;
  overflow: visible;
}

<div
  className="c0"
  data-analytics-region="region"
  role="alertdialog"
  tabIndex={-1}
>
  <label>
    message
  </label>
  <div
    className="c1"
  >
    <button
      className="c2"
      data-analytics-label="confirm"
      data-testid="confirm"
      onClick={[Function]}
      type="button"
    >
      confirm
    </button>
    <button
      className="c3"
      data-analytics-label="cancel"
      data-testid="cancel"
      onClick={[Function]}
      type="button"
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`Confirmation renders with data-analytics-label and ref 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.5rem;
  box-shadow: 0 0.2rem 0.4rem rgba(ui-color(black),0.2);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  overflow: initial;
  font-size: 1.4rem;
  height: 3rem;
  padding: 0 2rem;
  color: #fff;
  background-color: #d4450c;
  font-weight: bold;
  border: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c2:hover {
  background-color: ,#be3c08,;
}

.c2:active {
  background-color: ,#b03808,;
}

.c2:focus {
  outline: solid #fff;
  box-shadow: inset 0 0 0 0.3rem #000;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.5rem;
  box-shadow: 0 0.2rem 0.4rem rgba(ui-color(black),0.2);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  overflow: initial;
  font-size: 1.4rem;
  height: 3rem;
  padding: 0 2rem;
  color: #5e6062;
  background-color: #fff;
  border: 1px solid #d5d5d5;
  font-weight: regular;
}

.c3:hover {
  background-color: ,#fafafa,;
}

.c3:active {
  background-color: ,#e5e5e5,;
}

.c1 {
  display: grid;
  overflow: visible;
  grid-auto-flow: column;
  grid-gap: 1rem;
}

.c0 {
  background: rgba(0,0,0,0.9);
  outline: none;
  border-radius: 0.4rem;
  box-shadow: 0 0 2px 0 rgba(0,0,0,0.14),0 2px 2px 0 rgba(0,0,0,0.12),0 1px 3px 0 rgba(0,0,0,0.2);
  -webkit-transition: background 200ms;
  transition: background 200ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1.6rem;
  overflow: visible;
  min-height: 100%;
  min-width: 100%;
  position: static;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
}

.c0 label {
  color: #424242;
  font-size: 1.4rem;
  line-height: 1.6rem;
  font-weight: normal;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #fff;
  margin-bottom: 0.8rem;
  overflow: visible;
}

<div
  className="c0"
  role="alertdialog"
  tabIndex={-1}
>
  <label>
    message
  </label>
  <div
    className="c1"
  >
    <button
      className="c2"
      data-analytics-label="custom-label"
      data-testid="confirm"
      onClick={[Function]}
      type="button"
    >
      confirm
    </button>
    <button
      className="c3"
      data-analytics-label="cancel"
      data-testid="cancel"
      onClick={[Function]}
      type="button"
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`Confirmation works without optional props and drawFocus={true} 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.5rem;
  box-shadow: 0 0.2rem 0.4rem rgba(ui-color(black),0.2);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  overflow: initial;
  font-size: 1.4rem;
  height: 3rem;
  padding: 0 2rem;
  color: #fff;
  background-color: #d4450c;
  font-weight: bold;
  border: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c2:hover {
  background-color: ,#be3c08,;
}

.c2:active {
  background-color: ,#b03808,;
}

.c2:focus {
  outline: solid #fff;
  box-shadow: inset 0 0 0 0.3rem #000;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.5rem;
  box-shadow: 0 0.2rem 0.4rem rgba(ui-color(black),0.2);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  overflow: initial;
  font-size: 1.4rem;
  height: 3rem;
  padding: 0 2rem;
  color: #5e6062;
  background-color: #fff;
  border: 1px solid #d5d5d5;
  font-weight: regular;
}

.c3:hover {
  background-color: ,#fafafa,;
}

.c3:active {
  background-color: ,#e5e5e5,;
}

.c1 {
  display: grid;
  overflow: visible;
  grid-auto-flow: column;
  grid-gap: 1rem;
}

.c0 {
  background: rgba(0,0,0,0.9);
  outline: none;
  border-radius: 0.4rem;
  box-shadow: 0 0 2px 0 rgba(0,0,0,0.14),0 2px 2px 0 rgba(0,0,0,0.12),0 1px 3px 0 rgba(0,0,0,0.2);
  -webkit-transition: background 200ms;
  transition: background 200ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1.6rem;
  overflow: visible;
  min-height: 100%;
  min-width: 100%;
  position: static;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
}

.c0 label {
  color: #424242;
  font-size: 1.4rem;
  line-height: 1.6rem;
  font-weight: normal;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #fff;
  margin-bottom: 0.8rem;
  overflow: visible;
}

<div
  className="c0"
  role="alertdialog"
  tabIndex={-1}
>
  <label>
    message
  </label>
  <div
    className="c1"
  >
    <button
      className="c2"
      data-analytics-label="confirm"
      data-testid="confirm"
      onClick={[Function]}
      type="button"
    >
      confirm
    </button>
    <button
      className="c3"
      data-analytics-label="cancel"
      data-testid="cancel"
      onClick={[Function]}
      type="button"
    >
      Cancel
    </button>
  </div>
</div>
`;
